# aiida-wannier90-workflows

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  run_automated_wannier.py  setup.json  setup.py
.cla/version1/: CLA.md  signatures.json
.github/workflows/: ci.yml  cla.yml
aiida_wannier90_theosworkflows/: W90.py  __init__.py
aiida_wannier90_theosworkflows/tools/: get_w90model_from_aiida.py
aiida_wannier90_theosworkflows/workflows/: W90.py  __init__.py  band_structure.py  bands.py  wannier.py
aiida_wannier90_workflows/: __init__.py
aiida_wannier90_workflows/calculations/: split.py
aiida_wannier90_workflows/calculations/functions/: kmesh.py
aiida_wannier90_workflows/cli/: __init__.py  estimate.py  group.py  list.py  node.py  params.py  plot.py  root.py  statistics.py
aiida_wannier90_workflows/common/: types.py
aiida_wannier90_workflows/parsers/: split.py
aiida_wannier90_workflows/tools/: compare_dft_wannier_bands.py  extract_nelec_nproj_from_upf.py  get_w90model_from_aiida.py  magnetic_moments.py  plot_projectabilities.py  pseudopotential.py  wannier_guess.py
aiida_wannier90_workflows/utils/: bands.py  bandsdist.py  builder.py  center.py  checkerboard.py  code.py  dojo_nc_fr.json  estimator.py  extract_nelec_nproj_from_upf.py  get_w90model_from_aiida.py  kmesh.py  kpoints.py  nodes.py  plot.py  plots.py  pslibrary_paw_relpbe_1.0.0.json  scdm.py  semicore_sssp_efficiency_1.1.json  str.py  structure.py  upf.py
aiida_wannier90_workflows/utils/bands/: __init__.py  distance.py
aiida_wannier90_workflows/utils/node/: __init__.py  bands.py
aiida_wannier90_workflows/utils/parser/: bands.py  center.py  get_w90model_from_aiida.py  spread.py
aiida_wannier90_workflows/utils/pseudo/: __init__.py  upf.py
aiida_wannier90_workflows/utils/pseudo/data/: __init__.py
aiida_wannier90_workflows/utils/workflows/: bands.py  checkerboard.py  plot.py  pw.py
aiida_wannier90_workflows/utils/workflows/builder/: __init__.py  generator.py
aiida_wannier90_workflows/utils/workflows/estimator/: __init__.py  estimator.py  predict_smooth_grid.py
aiida_wannier90_workflows/workflows/: __init__.py  band_structure.py  bands.py  base.py  hamiltonian.py  opengrid.py  optimize.py  projwfcbands.py  split.py  wannier.py  wannier90.py
aiida_wannier90_workflows/workflows/base/: opengrid.py  projwfc.py  pw2wannier90.py  qebaserestart.py  wannier.py  wannier90.py
aiida_wannier90_workflows/workflows/protocols/: bands.yaml  wannier.yaml
aiida_wannier90_workflows/workflows/protocols/base/: opengrid.yaml  wannier90.yaml
aiida_wannier90_workflows/workflows/restart/: wannier.py
dev/: test_pseudos.py
dev/projectors/: .gitignore  example_extend_aiida_pseudo.py  example_extend_upf_file.py  fit_hydrogenics.py  projectors.py  required_orbitals.json  upfdict.py
dev/projectors/external_projector/PseudoDojo_0.4_PBE_FR_standard/: projectors.json
dev/projectors/external_projector/PseudoDojo_0.4_PBE_FR_standard_upf/: projectors.json
dev/projectors/external_projector_SSSP_1.1_PBE_efficiency/: projectors.json
dev/semicore/: pseudos.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/cli/: estimate.rst  group.rst  index.rst  list.rst  node.rst  plot.rst  statistics.rst
docs/source/developer_guide/: index.rst  pseudos.rst
docs/source/module_guide/: index.rst  utils.rst  workflows.rst
docs/source/user_guide/: index.rst
docs/source/user_guide/get_started/: index.rst
examples/: README.md  estimator.py  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_10.py  example_collinear.py  example_noncollinear.py  example_spinorbit.py  export_centers.py  plot_wannier_centres.py  run_projwfcbands.py  run_workflow.py
examples/input_files/: bcc_Fe.cif
examples/input_files/external_projectors/: projectors.json
examples/workflows/: GaAs.xsf  bccFe.cif  restart_from_stash.py  run_automated_wannier.py  run_dft_bands.py  run_pw_stash.py  run_w90.py  run_w90_scdm.py  run_w90_scdm_ins.py  run_wannier_scdm.py  run_workflow.py
src/aiida_wannier90_workflows/: __init__.py
src/aiida_wannier90_workflows/calculations/: split.py
src/aiida_wannier90_workflows/cli/: __init__.py  group.py  list.py  node.py  params.py  plot.py  root.py  statistics.py
src/aiida_wannier90_workflows/common/: types.py
src/aiida_wannier90_workflows/data/: structure.py
src/aiida_wannier90_workflows/parsers/: split.py
src/aiida_wannier90_workflows/utils/: code.py  collinear.py  kpoints.py  magnetism.py  scdm.py  str.py  structure.py
src/aiida_wannier90_workflows/utils/bands/: __init__.py  collinear.py  distance.py
src/aiida_wannier90_workflows/utils/parser/: bands.py  center.py  get_w90model_from_aiida.py  spread.py
src/aiida_wannier90_workflows/utils/projectors/: fit_hydrogenics.py  generate_required_list.py  projectors.py  required_orbitals.json  upfdict.py
src/aiida_wannier90_workflows/utils/pseudo/: __init__.py  upf.py
src/aiida_wannier90_workflows/utils/workflows/: __init__.py  bands.py  group.py  pw.py
src/aiida_wannier90_workflows/workflows/: __init__.py  bands.py  hamiltonian.py  open_grid.py  opengrid.py  optimize.py  projwfcbands.py  split.py  wannier90.py
src/aiida_wannier90_workflows/workflows/base/: open_grid.py  opengrid.py  projwfc.py  pw2wannier90.py  qebaserestart.py  wannier90.py
tests/: conftest.py
tests/cli/: test_commands.py
tests/fixtures/pseudos/: PseudoDojo_0.4_PBE_FR_standard_upf.yaml  SSSP_1.1_PBE_efficiency.yaml  prepare_yaml.py
tests/utils/: conftest.py  test_bands.py  test_homolumo.py  test_kpoints.py
tests/utils/workflows/: test_builder.py
tests/workflows/: __init__.py  conftest.py  test_wannier90.py
tests/workflows/base/: test_open_grid.py  test_opengrid.py  test_projwfc.py  test_pw2wannier90.py  test_wannier90.py
tests/workflows/protocols/: test_bands.py  test_open_grid.py  test_opengrid.py  test_optimize.py  test_protocols.py  test_wannier90.py
tools/: wannier_guess.py
utils/: validate_version_number.py
(+150 files in other folders)
